--- a/src/main/resources/templates/form-add.html
+++ b/src/main/resources/templates/form-add.html
@@ -11,7 +11,7 @@
 
 	<h1 class="page-header">Tambah Penduduk</h1>
 
-	<form action="/keluarga/tambah/submit" method="post">
+	<form action="/penduduk/tambah/submit" method="post">
 		<div>
 			<h4>Masukkan Nama</h4>
 			<label for="nama">Nama</label> <input type="text" name="nama" />
@@ -28,7 +28,7 @@
 		<div>
 			<h4>Jenis Kelamin</h4>
 			<label for="jenis_kelamin">Jenis Kelamin</label>
-			 <select name="jenis_kelamin">
+			 <select name="jenis_kelamin" >
 				<option value="1">Perempuan</option>
 				<option value="0">Laki-Laki</option>
 			</select>
