--- a/src/main/resources/templates/success-update-keluarga.html
+++ b/src/main/resources/templates/success-update-keluarga.html
@@ -3,6 +3,6 @@
 		<title>Update</title>
 	</head>
 	<body>
-		<h2>Penduduk berhasil diupdate</h2>
+		<h2>Keluarga berhasil diupdate</h2>
 	</body>
 </html>
