--- a/src/main/resources/templates/form-update.html
+++ b/src/main/resources/templates/form-update.html
@@ -3,7 +3,7 @@
 	xmlns:th="http://www.thymeleaf.org">
 <head>
 
-<title>Update student</title>
+<title>Update Penduduk</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 
@@ -11,17 +11,77 @@
 
 	<h1 class="page-header">Update</h1>
 
-	<form action="/student/update/submit" th:object="${student}" method="post">
+	<form action="/penduduk/ubah/submit" th:object="${penduduk}" method="post">
 		<div>
-			<label for="npm">NPM</label> <input type="text" name="npm" readonly="true" th:field="*{npm}"/>
+			<label for="nik">NIK</label> <input type="text" name="nik" readonly="true" th:field="*{nik}"/>
 		</div>
 		<div>
-			<label for="name">Name</label> <input type="text" name="name" th:field="*{name}"/>
+			<label for="id">ID</label> <input type="text" name="id" readonly="true" th:field="*{id}"/>
 		</div>
 		<div>
-			<label for="gpa">GPA</label> <input type="text" name="gpa" th:field="*{gpa}"/>
+			<label for="nama">Nama</label> <input type="text" name="nama" th:field="*{nama}"/>
 		</div>
-
+		<div>
+			<label for="tempat_lahir">Tempat Lahir</label> <input type="text" name="tempat_lahir" th:field="*{tempat_lahir}"/>
+		</div>
+		<div>
+			<label for="tanggal_lahir">Tanggal Lahir</label> <input type="text" name="tanggal_lahir" th:field="*{tanggal_lahir}"/>
+		</div>
+		<div>
+			<label for="jenis_kelamin">Jenis Kelamin</label> 
+			<select name="jenis_kelamin" th:field="*{jenis_kelamin}" >
+				<option value="1">Perempuan</option>
+				<option value="0">Laki-Laki</option>
+			</select>
+		</div>
+		<div>
+			<label for="golongan_darah">Golongan Darah</label> 
+			<select name="golongan_darah" th:field="*{golongan_darah}">
+				<option value="A+">A+</option>
+				<option value="A-">A-</option>
+				<option value="B+">B+</option>
+				<option value="B-">B-</option>
+				<option value="O+">O+</option>
+				<option value="O-">O-</option>
+				<option value="AB+">AB+</option>
+				<option value="AB-">AB-</option>
+			</select>
+		</div>
+		<div>
+			<label for="agama">Agama</label> <input type="text" name="agama" th:field="*{agama}"/>
+		</div>
+		<div>
+			<label for="status_perkawinan">Status Perkawinan</label>
+			<select name="status_perkawinan" th:field="*{status_perkawinan}">
+				<option value="Kawin">Kawin</option>
+				<option value="Jomblo">Jomblo</option>
+			</select>
+		</div>
+		<div>
+			<label for="pekerjaan">Pekerjaan</label> <input type="text" name="pekerjaan" th:field="*{pekerjaan}"/>
+		</div>
+		<div>
+			<label for="is_wni">Kewarganegaraan</label>
+			<select name="is_wni" th:field="*{is_wni}">
+				<option value="1">WNI</option>
+				<option value="0">WNA</option>
+			</select>
+		</div>
+		<div>
+			<label for="status_dalam_keluarga">Status Dalam Keluarga</label> <input type="text" name="status_dalam_keluarga" th:field="*{status_dalam_keluarga}" />
+		</div>
+		<div>
+		<label for="is_wafat">Status Kematian</label> 
+			<select name="is_wafat" th:field="*{is_wafat}">
+				<option value="0">Hidup</option>
+				<option value="1">Modar</option>
+			</select>
+		</div>
+		<div>
+			<label for="id_keluarga">Id Keluarga</label> <input type="text" name="id_keluarga" th:field="*{id_keluarga}"/>
+		</div>		
+		<hr/>
+		<br/>
 		<div>
 			<button type="submit" name="action" value="save">Save</button>
 		</div>
