--- a/src/main/resources/templates/form-add.html
+++ b/src/main/resources/templates/form-add.html
@@ -3,7 +3,7 @@
 	xmlns:th="http://www.thymeleaf.org">
 <head>
 
-<title>Add student</title>
+<title>Add Penduduk</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 
@@ -50,7 +50,7 @@
 		</div>
 		<div>
 			<h4>Agama</h4>
-			<label for="agama">agama</label> <input type="text" name="agama" />
+			<label for="agama">Agama</label> <input type="text" name="agama" />
 		</div>
 		<div>
 			<h4>Status Perkawinan</h4>
