--- a/src/main/resources/templates/form-update-keluarga.html
+++ b/src/main/resources/templates/form-update-keluarga.html
@@ -3,7 +3,7 @@
 	xmlns:th="http://www.thymeleaf.org">
 <head>
 
-<title>Update keluarga</title>
+<title>Update Keluarga</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 
