--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,6 +3,6 @@
 		<title>Index</title>
 	</head>
 	<body>
-		<h2>Welcome To Tutorial 4 APAP</h2>
+		<h2>Welcome To Tugas 1 APAP</h2>
 	</body>
 </html>
